@@ -358,6 +358,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1412872: zipfile now sets the creator system to 3 (Unix)
+  unless the system is Win32.
+
 - Patch #1349118: urllib now supports user:pass@ style proxy 
   specifications, raises IOErrors when proxies for unsupported protocols
   are defined, and uses the https proxy on https redirections.
